# GainMilesTest

./: .gitignore  Dockerfile  Jenkinsfile  README.md  app.py  docker-compose.yml  pyproject.toml
adapter/controller/product/: product_controller.py
adapter/repository/color/: color_model.py
adapter/repository/product/: product_model.py  product_repository.py
adapter/repository/size/: size_model.py
entity/color/: color.py
entity/product/: product.py
entity/size/: size.py
entity/tests/: test_sample.py
use_case/mapper/product/: product_mapper.py
use_case/product/: create_product.py  delete_product.py  read_product.py  update_product.py
use_case/repository/: repository_interface.py
